# anki-translator

./: .gitignore  pyproject.toml  setup.py
src/: __init__.py  main.py
src/api/: __init__.py  anki_api.py  anki_service.py  translation.py
src/api/translators/: deepl_service.py  googletrans_service.py  slovak_sk_service.py
src/ui/: main_window.py
src/ui/components/: __init__.py  card_fields.py  deck_selector.py  language_selector.py  model_selector.py  tranlator_selector.py
src/ui/pages/: main_page.py  settings_page.py  staked_widget.py
src/utils/: __init__.py  clipboard.py  config_manager.py  styles.py
